--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/afcc-reloader.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/afcc-reloader.component.html
@@ -17,7 +17,7 @@
                 <app-unknown-position *ngIf="(operabilityState$ | async).valueOf() === 'UNKNOWN_POSITION'"></app-unknown-position>
                 <app-bluetooth-connection *ngIf="(operabilityState$ | async).valueOf() === 'DISCONNECTED'"></app-bluetooth-connection>
                 <app-afcc-info *ngIf="(operabilityState$ | async).valueOf() === 'CONNECTED'"></app-afcc-info>
-                <app-read-card *ngIf="(operabilityState$ | async).valueOf() === 'READING_CARD'"></app-read-card>
+                <app-read-card *ngIf="(operabilityState$ | async).valueOf() === 'READING_CARD' || (operabilityState$ | async).valueOf() === 'CARD_READED'"></app-read-card>
                 <app-internal-error *ngIf="(operabilityState$ | async).valueOf() === 'INTERNAL_ERROR'"></app-internal-error>
                 <app-read-card-error *ngIf="(operabilityState$ | async).valueOf() === 'READING_CARD_ERROR'"></app-read-card-error>
                 <app-reload-card *ngIf="(operabilityState$ | async).valueOf() === 'RELOADING_CARD'"></app-reload-card>
