--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/read-card-error/read-card-error.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/read-card-error/read-card-error.component.html
@@ -13,5 +13,5 @@
     </div>
   </div>
   <div style="justify-content: flex-end" class="horizontal-container">
-      <button style="margin-right: 20px" mat-stroked-button color="primary" (click)="retry()">Reintentar</button>
+      <button style="margin-right: 20px" mat-stroked-button color="primary" (click)="retry()">Volver</button>
   </div>
