--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/afcc-reloader.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/afcc-reloader.component.html
@@ -10,9 +10,14 @@
       <mat-card-title style="font-size: 19px;"><b>Venta carga</b></mat-card-title>
       <mat-card-subtitle>Tarjetas Civica</mat-card-subtitle>
     </mat-card-header>
+    <mat-progress-bar
+                *ngIf="(operabilityState$ | async).valueOf() === 'CONNECTING'"
+                color="primary"
+                mode="indeterminate">
+            </mat-progress-bar>
     <mat-card-content>
         <div class="vertical-container">
-            <mat-divider></mat-divider>
+            <mat-divider *ngIf="(operabilityState$ | async).valueOf() !== 'CONNECTING'"></mat-divider>
             <div class="vertical-container">
                 <app-unknown-position *ngIf="(operabilityState$ | async).valueOf() === 'UNKNOWN_POSITION'"></app-unknown-position>
                 <app-bluetooth-connection *ngIf="(operabilityState$ | async).valueOf() === 'DISCONNECTED' || (operabilityState$ | async).valueOf() === 'CONNECTING'"></app-bluetooth-connection>
