--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/read-card-error/read-card-error.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/read-card-error/read-card-error.component.html
@@ -5,10 +5,14 @@
     <svg-icon src="assets/check.svg" [svgStyle]="{'width':150, 'height': 150,'fill':'#F59100'}"></svg-icon>
     <div style=" margin:auto; margin-left: 0px; color: #444;" class="vertical-container">
       <mat-list>
-        <mat-list-item>
+        <mat-list-item *ngIf="operationState === 'READING_CARD_ERROR' ">
           <svg-icon src="assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
           Asegúrese que la tarjeta se encuentra de forma fija y centrada en el lector
         </mat-list-item>
+        <mat-list-item *ngIf="operationState === 'CARD_READED_NOT_SUPPORTED' ">
+            <svg-icon src="assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
+            El tipo de tarjeta ingresada no es soportada actualmente
+          </mat-list-item>
       </mat-list>
     </div>
   </div>
