--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/read-card/read-card.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/read-card/read-card.component.html
@@ -5,10 +5,10 @@
   <svg-icon src="assets/card.svg" [svgStyle]="{'width':150, 'height': 150,'fill':'#838583'}"></svg-icon>
   <div style=" margin:auto; margin-left: 0px; color: #444;" class="vertical-container">
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Saldo" value="">
+      <input matInput name="balance" [(ngModel)]="balance" placeholder="Saldo" >
     </mat-form-field>
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Estado" value="">
+      <input matInput [(ngModel)]="state" placeholder="Estado">
     </mat-form-field>
     <mat-form-field *ngIf="operationState === 'CARD_READED'" class="example-full-width">
       <input matInput placeholder="Valor recarga"  [(ngModel)]="value" currencyMask [options]="{ prefix: '$ ', thousands: '.', precision: '0' }">
