--- a/frontend/emi/civica-card-reload-pos/civica-card-reload-pos.component.html
+++ b/frontend/emi/civica-card-reload-pos/civica-card-reload-pos.component.html
@@ -1,4 +1,6 @@
 
 <div class="page-layout blank p-24" fusePerfectScrollbar>
-    <iframe src="https://webcomponent-15248.firebaseapp.com/"></iframe>
+    <iframe src="https://webcomponent-15248.firebaseapp.com/"
+    sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-top-navigation"
+    width="300"  ></iframe>
 </div>
