--- a/frontend/emi/civica-card-reload-pos/civica-card-reload-pos.component.html
+++ b/frontend/emi/civica-card-reload-pos/civica-card-reload-pos.component.html
@@ -1,6 +1,18 @@
-
 <div class="page-layout blank p-24" fusePerfectScrollbar>
-    <iframe src="https://webcomponent-15248.firebaseapp.com/"
-    sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-top-navigation"
-    width="300"  ></iframe>
+
+        <a href="https://webcomponent-15248.firebaseapp.com">Ir a POS provisional</a>
+
+    <!-- <afcc-reloader width='400' height='500' jwt=""
+        pos_id="testPosId" pos_terminal="testPosTerminal" pos_user_name="testPosUser" pos_user_id="testPosUserId">
+    </afcc-reloader>
+    <script>
+        const afccReloader = document.querySelector('afcc-reloader');
+        afccReloader.addEventListener('reloaderConnected', (event) => {
+            console.log(`"action" emitted: ${event.detail}`);
+            afccReloader.setJwt = 'test3';
+        });
+        afccReloader.setJwt = 'test';
+    </script> -->
+
+
 </div>
