--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/bluetooth-connection/bluetooth-connection.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/bluetooth-connection/bluetooth-connection.component.html
@@ -24,3 +24,8 @@
     </mat-list>
   </div>
 </div>
+
+<mat-form-field class="example-full-width">
+  <input matInput placeholder="JWT"  [(ngModel)]="jwtTest">
+</mat-form-field>
+<button mat-stroked-button color="primary" (click)="refreshJwt()" >Refrescar JWT</button>
