verifies wallet spending allowed at the beginiing of the conversations

--- a/frontend/emi/civica-card-reload-pos/civica-card-reload-pos.component.html
+++ b/frontend/emi/civica-card-reload-pos/civica-card-reload-pos.component.html
@@ -1,5 +1,7 @@
 <div class="page-layout blank p-24" fusePerfectScrollbar>
-  <a href="https://webcomponent-15248.firebaseapp.com">Ir a POS provisional</a>
-
+    <a href="https://webcomponent-15248.firebaseapp.com">Ir a POS provisional</a>
+    
+    <!-- <afcc-reloader width='400' height='500'></afcc-reloader>
+    <script src="https://pyxis.nebulae.com.co/emi/assets/civica-card-reload-pos/afcc-reloader.js"></script> -->
 
 </div>
