--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/read-card-error/read-card-error.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/read-card-error/read-card-error.component.html
@@ -12,7 +12,11 @@
         <mat-list-item *ngIf="operationState === 'CARD_READED_NOT_SUPPORTED' ">
             <svg-icon src="assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
             El tipo de tarjeta ingresada no es soportada actualmente
-          </mat-list-item>
+        </mat-list-item>
+        <mat-list-item *ngIf="operationState === 'NO_BALANCE' ">
+          <svg-icon src="assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
+          Saldo insuficiente para realizar la operación
+      </mat-list-item>
       </mat-list>
     </div>
   </div>
