--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/reload-card-error/reload-card-error.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/reload-card-error/reload-card-error.component.html
@@ -2,11 +2,11 @@
   <b style="font-size: 16px; color: #444">Fallo tratando de escribir la tarjeta</b>
 </div>
 <div style="margin-top: 20px;" class="horizontal-container">
-  <svg-icon src="assets/check.svg" [svgStyle]="{'width':150, 'height': 150,'fill':'#F59100'}"></svg-icon>
+  <svg-icon src="assets/civica-card-reload-pos/assets/check.svg" [svgStyle]="{'width':150, 'height': 150,'fill':'#F59100'}"></svg-icon>
   <div style=" margin:auto; margin-left: 0px; color: #444;" class="vertical-container">
     <mat-list>
       <mat-list-item>
-        <svg-icon src="assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
+        <svg-icon src="assets/civica-card-reload-pos/assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
         Asegúrese que la tarjeta se encuentra de forma fija y centrada en el lector
       </mat-list-item>
     </mat-list>
