--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/reload-card-refused/reload-card-refused.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/reload-card-refused/reload-card-refused.component.html
@@ -2,15 +2,15 @@
     <b style="font-size: 16px; color: #444">Fallo tratando de leer la tarjeta</b>
   </div>
   <div style="margin-top: 20px;" class="horizontal-container">
-    <svg-icon src="assets/check.svg" [svgStyle]="{'width':150, 'height': 150,'fill':'#F59100'}"></svg-icon>
+    <svg-icon src="assets/civica-card-reload-pos/assets/check.svg" [svgStyle]="{'width':150, 'height': 150,'fill':'#F59100'}"></svg-icon>
     <div style=" margin:auto; margin-left: 0px; color: #444;" class="vertical-container">
       <mat-list>
         <mat-list-item>
-          <svg-icon src="assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
+          <svg-icon src="assets/civica-card-reload-pos/assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
           Venta no aceptada
         </mat-list-item>
         <mat-list-item>
-            <svg-icon src="assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
+            <svg-icon src="assets/civica-card-reload-pos/assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
             {{error | async}}
           </mat-list-item>
       </mat-list>
