--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/unknown-position/unknown-position.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/unknown-position/unknown-position.component.html
@@ -2,17 +2,17 @@
   <b style="font-size: 16px; color: #444">Lectora desconectada, por favor establecer conexión con lectora Bluetooth</b>
 </div>
 <div style="margin-top: 20px; justify-content: center;" class="horizontal-container">
-  <svg-icon src="assets/unknown_position.svg" [svgStyle]="{'width':150, 'height': 150,'fill':'#F63131'}"></svg-icon>
+  <svg-icon src="assets/civica-card-reload-pos/assets/unknown_position.svg" [svgStyle]="{'width':150, 'height': 150,'fill':'#F63131'}"></svg-icon>
   <div style="color: #444;" class="text-container">
     <mat-list>
       <mat-list-item>
-        <svg-icon src="assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
+        <svg-icon src="assets/civica-card-reload-pos/assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
         Se debe permitir la optención de la ubicación en el navegador para un funcionamiento optimo de este componente
       </mat-list-item>
       <mat-list-item>
         </mat-list-item>
       <mat-list-item>
-        <svg-icon src="assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
+        <svg-icon src="assets/civica-card-reload-pos/assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
         Si aun persiste el problema, por favor comunicarse con la mesa de ayuda
       </mat-list-item>
     </mat-list>
