--- a/frontend/emi/civica-card/civica-card.component.html
+++ b/frontend/emi/civica-card/civica-card.component.html
@@ -1,4 +1,3 @@
 <div class="page-layout blank p-24" fusePerfectScrollbar>
-    <afcc-reloader #webcomponent width='400' height='500' jwt=''
-  pos_id="testPosId" pos_terminal="testPosTerminal" pos_user_name="testPosUser" pos_user_id="testPosUserId"></afcc-reloader>
+    <iframe #webcomponent width="500" height="600" frameBorder="0" allo="geolocation *;" src="https://pyxis.nebulae.com.co/emi/assets/civica-card-reload-pos/index.html">Warning: foo.html could not be included!</iframe>
 </div>
