--- a/frontend/emi/civica-card-reload-pos/civica-card-reload-pos.component.html
+++ b/frontend/emi/civica-card-reload-pos/civica-card-reload-pos.component.html
@@ -1,4 +1,3 @@
 <div class="page-layout blank p-24" fusePerfectScrollbar>
-        <afcc-reloader #webcomponent width='400' height='500' jwt=''
-        pos_id="testPosId" pos_terminal="testPosTerminal" pos_user_name="testPosUser" pos_user_id="testPosUserId"></afcc-reloader>
+        <custom-button label="First Value"></custom-button>
 </div>
