--- a/frontend/emi/civica-card-reload-pos/civica-card-reload-pos.component.html
+++ b/frontend/emi/civica-card-reload-pos/civica-card-reload-pos.component.html
@@ -1,3 +1,4 @@
 <div class="page-layout blank p-24" fusePerfectScrollbar>
-        <custom-button label="First Value"></custom-button>
+  <afcc-reloader #webcomponent width='500' height='550' jwt=''
+  pos_id="testPosId" pos_terminal="testPosTerminal" pos_user_name="testPosUser" pos_user_id="testPosUserId"></afcc-reloader>
 </div>
