Fixes errors en civica card sales history

--- a/frontend/emi/civica-card-sales-history/sales-history/sale-history.component.scss
+++ b/frontend/emi/civica-card-sales-history/sales-history/sale-history.component.scss
@@ -132,7 +132,7 @@
     background: #B9BBB9;
 }
 
-.transactions {
+.civicaCardReloads {
     position: relative;
     cursor: pointer;
     height: 84px;
