--- a/frontend/emi/civica-card-sales-history/sales-history/sale-history.component.html
+++ b/frontend/emi/civica-card-sales-history/sales-history/sale-history.component.html
@@ -36,22 +36,31 @@
           >
         </div>
 
-        <div class="account" fxFlex fxFill fxLayout="row" fxLayoutAlign="space-between end">
+        <div
+          class="account"
+          fxFlex
+          fxFill
+          fxLayout="row"
+          fxLayoutAlign="space-between end"
+        >
           <span
             class="mat-title"
             *fuseIfOnDom
             [@animate]="{ value: '*', params: { delay: '100ms', x: '-25px' } }"
-            >{{ "SALES_HISTORY.WALLET" | translate }}
+            >{{ "SALES_HISTORY.FILTER" | translate }}
           </span>
 
-          <button mat-mini-fab class="mb-8"
-          [ngClass]="{'blink-button': outdatedData}" (click)="resetFilter()"
-          matTooltip="{{ 'SALES_HISTORY.SALES_HISTORY_REFRESH' | translate }}">
+          <button
+            mat-mini-fab
+            class="mb-8"
+            *ngIf="false"
+            [ngClass]="{ 'blink-button': outdatedData }"
+            (click)="resetFilter()"
+            matTooltip="{{ 'SALES_HISTORY.SALES_HISTORY_REFRESH' | translate }}"
+          >
             <mat-icon aria-label="Icon with a refresh icon">refresh</mat-icon>
-          </button>    
-
+          </button>
         </div>
-
       </div>
       <!-- / SIDENAV HEADER -->
 
@@ -62,11 +71,7 @@
         *fuseIfOnDom
         [@animate]="{ value: '*', params: { y: '50px' } }"
       >
-
-
-        <div class="nav" fxLayout="column">
-          <div class="nav-subheader">{{ "SALES_HISTORY.FILTER" | translate }}</div>
-
+        <div class="nav mt-20" fxLayout="column">
           <form
             fxLayout="column"
             fxLayoutAlign="start"
@@ -92,7 +97,7 @@
                   [for]="pickerInitDate"
                 ></mat-datepicker-toggle>
                 <mat-datepicker
-                [twelveHour]="false"
+                  [twelveHour]="false"
                   type="datetime"
                   #pickerInitDate
                 ></mat-datepicker>
@@ -113,41 +118,10 @@
                   [for]="pickerEndDate"
                 ></mat-datepicker-toggle>
                 <mat-datepicker
-                [twelveHour]="false"
+                  [twelveHour]="false"
                   type="datetime"
                   #pickerEndDate
                 ></mat-datepicker>
-              </mat-form-field>
-
-              <mat-form-field>
-                <mat-select
-                  placeholder="{{'SALES_HISTORY.SELECT_TRANSACTION_TYPE' | translate}}"
-                  formControlName="transactionType" [compareWith]="compareTypes"
-                  id="transactionType" (selectionChange)="filterForm.get('transactionConcept').reset()"
-                >
-                  <mat-option>{{ "SALES_HISTORY.NONE" | translate }}</mat-option>
-                  <mat-option
-                    *ngFor="let transactionType of typesAndConceptsList"
-                    [value]="transactionType"
-                  >
-                    {{ "SALES_HISTORY.TYPES." + transactionType.type | translate }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-
-              <mat-form-field fxFlex="100" *ngIf="filterForm.get('transactionType').value">
-                <mat-select
-                  placeholder="{{'SALES_HISTORY.SELECT_TRANSACTION_CONCEPT' | translate}}"
-                  formControlName="transactionConcept"
-                >
-                  <mat-option>{{ "SALES_HISTORY.NONE" | translate }}</mat-option>
-                  <mat-option
-                    *ngFor="let transactionConcept of filterForm.get('transactionType').value.concepts"
-                    [value]="transactionConcept"
-                  >
-                    {{ "SALES_HISTORY.CONCEPTS." + transactionConcept | translate }}
-                  </mat-option>
-                </mat-select>
               </mat-form-field>
 
               <mat-form-field>
@@ -158,6 +132,16 @@
                   id="terminalId"
                   maxlength="20"
                 />
+              </mat-form-field>
+
+              <mat-form-field>
+                  <input
+                    matInput
+                    placeholder="{{'SALES_HISTORY.TERMINAL_POS_ID' | translate}}"
+                    formControlName="terminalPosId"
+                    id="terminalPosId"
+                    maxlength="20"
+                  />
               </mat-form-field>
 
               <mat-form-field>
@@ -235,21 +219,41 @@
             class="search mat-white-bg"
             flex
             fxLayout="row"
-            fxLayoutAlign="start center">
-
+            fxLayoutAlign="start center"
+          >
             <mat-icon *ngIf="isSystemAdmin">search</mat-icon>
 
-            <input [placeholder]="'SALES_HISTORY.SELECT_BUSINESS' | translate" aria-label="Business" *ngIf="!isSystemAdmin"
-             [formControl]="businessFilterCtrl" [(value)]="selectedBusinessName" fxFlex readonly="true">
+            <input
+              [placeholder]="'SALES_HISTORY.SELECT_BUSINESS' | translate"
+              aria-label="Business"
+              *ngIf="!isSystemAdmin"
+              [formControl]="businessFilterCtrl"
+              [(value)]="selectedBusinessName"
+              fxFlex
+              readonly="true"
+            />
 
-              <input [placeholder]="'SALES_HISTORY.SELECT_BUSINESS' | translate" aria-label="Business" [matAutocomplete]="auto" *ngIf="isSystemAdmin"
-              [(value)]="selectedBusinessData" [formControl]="businessFilterCtrl" fxFlex>
-              <mat-autocomplete #auto="matAutocomplete" (optionSelected)='onSelectBusinessEvent($event.option.value)' [displayWith]="displayFn">
-                <mat-option *ngFor="let business of businessQueryFiltered$ | async"
-                [value]="business">
-                {{ business.name }} (ID: {{ business._id }})
+            <input
+              [placeholder]="'SALES_HISTORY.SELECT_BUSINESS' | translate"
+              aria-label="Business"
+              [matAutocomplete]="auto"
+              *ngIf="isSystemAdmin"
+              [(value)]="selectedBusinessData"
+              [formControl]="businessFilterCtrl"
+              fxFlex
+            />
+            <mat-autocomplete
+              #auto="matAutocomplete"
+              (optionSelected)="onSelectBusinessEvent($event.option.value)"
+              [displayWith]="displayFn"
+            >
+              <mat-option
+                *ngFor="let business of (businessQueryFiltered$ | async)"
+                [value]="business"
+              >
+                {{ business.generalInfo.name }} (ID: {{ business._id }})
               </mat-option>
-              </mat-autocomplete>
+            </mat-autocomplete>
           </div>
         </div>
       </div>
@@ -269,83 +273,89 @@
             <mat-header-cell *cdkHeaderCellDef>{{
               "SALES_HISTORY.TIMESTAMP" | translate
             }}</mat-header-cell>
-            <mat-cell *cdkCellDef="let transaction">
+            <mat-cell *cdkCellDef="let civicaCardReload">
               <p class="text-truncate">
-                {{ transaction.timestamp | date: "dd/MM/y HH:mm:ss" }}
+                {{ civicaCardReload.timestamp | date: "dd/MM/y HH:mm:ss" }}
               </p>
             </mat-cell>
           </ng-container>
 
-          <!-- From Column -->
-          <ng-container cdkColumnDef="type">
-            <mat-header-cell *cdkHeaderCellDef>{{
-              "SALES_HISTORY.TRANSACTION_TYPE" | translate
-            }}</mat-header-cell>
-            <mat-cell *cdkCellDef="let transaction">
-              <p class="text-truncate">
-                {{ "SALES_HISTORY.TYPES." + transaction.type | translate }}
-              </p>
-            </mat-cell>
-          </ng-container>
-
-          <!-- Concept Column -->
-          <ng-container cdkColumnDef="concept">
-            <mat-header-cell *cdkHeaderCellDef>{{
-              "SALES_HISTORY.TRANSACTION_CONCEPT" | translate
-            }}</mat-header-cell>
-            <mat-cell *cdkCellDef="let transaction">
-              <p class="text-truncate">
-                {{ "SALES_HISTORY.CONCEPTS." + transaction.concept | translate }}
-              </p>
-            </mat-cell>
-          </ng-container>
 
           <!-- Value Column -->
           <ng-container cdkColumnDef="value">
             <mat-header-cell *cdkHeaderCellDef>{{
-              "SALES_HISTORY.TRANSACTION_VALUE" | translate
+              "SALES_HISTORY.VALUE" | translate
             }}</mat-header-cell>
-            <mat-cell *cdkCellDef="let transaction">
-              <p class="text-truncate" [ngClass]="{'green-fg':transaction.value > 0, 'red-fg':transaction.value < 0}">
-                {{ transaction.value | currency }}
-              </p>
-            </mat-cell>
-          </ng-container>
-
-          <!-- Pocket Column -->
-          <ng-container cdkColumnDef="pocket">
-            <mat-header-cell *cdkHeaderCellDef>{{
-              "SALES_HISTORY.TRANSACTION_POCKET" | translate
-            }}</mat-header-cell>
-            <mat-cell *cdkCellDef="let transaction">
+            <mat-cell *cdkCellDef="let civicaCardReload">
               <p class="text-truncate">
-                {{ "SALES_HISTORY." + transaction.pocket | translate }}
+                {{ civicaCardReload.value | currency}}
               </p>
             </mat-cell>
           </ng-container>
 
-          <!-- User Column -->
-          <ng-container cdkColumnDef="user">
+          <!-- ConsolidatedBalance Column -->
+          <ng-container cdkColumnDef="consolidatedBalance">
+            <mat-header-cell *cdkHeaderCellDef>{{"SALES_HISTORY.CONSOLIDATED_BALANCE" | translate}}</mat-header-cell>
+            <mat-cell *cdkCellDef="let civicaCardReload">
+              <p class="text-truncate">
+                {{ civicaCardReload.finalCard._saldoConsolidado }}
+              </p>
+            </mat-cell>
+          </ng-container>
+
+
+          <!-- Terminal Column -->
+          <ng-container cdkColumnDef="posTerminal">
             <mat-header-cell *cdkHeaderCellDef>{{
-              "SALES_HISTORY.TRANSACTION_USER" | translate
+              "SALES_HISTORY.POS_TERMINAL" | translate
             }}</mat-header-cell>
-            <mat-cell *cdkCellDef="let transaction">
-              <p class="text-truncate">{{ transaction.user }}</p>
+            <mat-cell *cdkCellDef="let civicaCardReload">
+              <p class="text-truncate">{{  civicaCardReload.receipt.posTerminal }}</p>
+            </mat-cell>
+          </ng-container>
+
+
+          <!-- POS ID Column -->
+          <ng-container cdkColumnDef="posId">
+            <mat-header-cell *cdkHeaderCellDef>{{
+              "SALES_HISTORY.POS_ID" | translate
+            }}</mat-header-cell>
+            <mat-cell *cdkCellDef="let civicaCardReload">
+              <p class="text-truncate">{{  civicaCardReload.receipt.posId }}</p>
+            </mat-cell>
+          </ng-container>
+
+          <!-- POS user id Column -->
+          <ng-container cdkColumnDef="posUserId">
+            <mat-header-cell *cdkHeaderCellDef>{{
+              "SALES_HISTORY.POS_USER_ID" | translate
+            }}</mat-header-cell>
+            <mat-cell *cdkCellDef="let civicaCardReload">
+              <p class="text-truncate">{{  civicaCardReload.receipt.posUserId }}</p>
+            </mat-cell>
+          </ng-container>
+
+          <!-- POS username Column -->
+          <ng-container cdkColumnDef="posUsername">
+            <mat-header-cell *cdkHeaderCellDef>
+              {{"SALES_HISTORY.POS_USERNAME" | translate}}</mat-header-cell>
+            <mat-cell *cdkCellDef="let civicaCardReload">
+              <p class="text-truncate">{{  civicaCardReload.receipt.posUserName }}</p>
             </mat-cell>
           </ng-container>
 
           <mat-header-row *cdkHeaderRowDef="displayedColumns"></mat-header-row>
 
           <mat-row
-            *cdkRowDef="let transaction; columns: displayedColumns"
-            class="transactions"
-            (click)="selectTransactionHistoryRow(transaction)"
+            *cdkRowDef="let civicaCardReload; columns: displayedColumns"
+            class="civicaCardReloads"
+            (click)="selectSaleHistoryRow(civicaCardReload)"
             [ngClass]="{
               highlight:
-                selectedTransactionHistory &&
-                selectedTransactionHistory._id == transaction._id
+              selectedSaleHistory &&
+              selectedSaleHistory._id == civicaCardReload._id
             }"
-            [routerLink]="transaction._id"
+            [routerLink]="civicaCardReload._id"
             matRipple
           >
           </mat-row>
