--- a/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/read-card-error/read-card-error.component.html
+++ b/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/read-card-error/read-card-error.component.html
@@ -2,10 +2,6 @@
   <b style="font-size: 16px; color: #444">Fallo tratando de leer la tarjeta</b>
 </div>
 <div style="margin-top: 20px;" class="horizontal-container">
-  <svg-icon
-    src="assets/civica-card-reload-pos/check.svg"
-    [svgStyle]="{ width: 150, height: 150, fill: '#F59100' }"
-  ></svg-icon>
   <div
     style=" margin:auto; margin-left: 0px; color: #444;"
     class="vertical-container"
@@ -74,7 +70,7 @@
         ></svg-icon>
         Información de la tarjeta corrupta
       </mat-list-item>
-      
+
 
       <mat-list-item
         *ngIf="operationState === 'CIVICA_CARD_READ_FAILED'"
@@ -100,7 +96,7 @@
     </mat-list>
   </div>
 </div>
-<div style="justify-content: flex-end" class="horizontal-container">
+<div style="justify-content: flex-end; margin-top: 50px" class="horizontal-container">
   <button
     style="margin-right: 20px"
     mat-stroked-button
