--- a/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/reload-card-error/reload-card-error.component.html
+++ b/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/reload-card-error/reload-card-error.component.html
@@ -2,7 +2,6 @@
   <b style="font-size: 16px; color: #444">Fallo tratando de escribir la tarjeta</b>
 </div>
 <div style="margin-top: 20px;" class="horizontal-container">
-  <svg-icon src="assets/civica-card-reload-pos/check.svg" [svgStyle]="{'width':150, 'height': 150,'fill':'#F59100'}"></svg-icon>
   <div style=" margin:auto; margin-left: 0px; color: #444;" class="vertical-container">
     <mat-list>
       <mat-list-item>
@@ -12,7 +11,7 @@
     </mat-list>
   </div>
 </div>
-<div style="justify-content: flex-end" class="horizontal-container">
+<div style="justify-content: flex-end; margin-top: 50px" class="horizontal-container">
     <button style="margin-right: 20px" mat-stroked-button color="primary" (click)="retry()">Reintentar</button>
     <button mat-stroked-button color="warn" (click)="abort()">Abortar</button>
 </div>
