--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/afcc-reloader.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/afcc-reloader.component.html
@@ -1,9 +1,9 @@
-<mat-card [ngStyle]="{ width: width, height: height }" class="example-card">
-  <mat-card-header>
+<mat-card style="min-height: 500px; height: auto; max-width: 500px;">
+  <mat-card-header >
     <div *ngIf="!(showBackButton() | async)" mat-card-avatar>
       <svg-icon
-        src="assets/civica-card-reload-pos/assets/bluetooth.svg"
-        [svgStyle]="{ width: 40, height: 40, fill: '#3f51b5' }"
+        src="assets/civica-card-reload-pos/{{getHeaderIcon$() | async}}"
+        [svgStyle]="{ width: 40, height: 40, fill: getHeaderIconColor$() | async }"
       ></svg-icon>
     </div>
     <button
@@ -13,7 +13,7 @@
       color="primary"
       mat-mini-fab
     >
-      <svg-icon src="assets/civica-card-reload-pos/assets/back.svg" [svgStyle]="{ fill: '#fff' }"></svg-icon>
+      <svg-icon src="assets/civica-card-reload-pos/back.svg" [svgStyle]="{ fill: '#fff' }"></svg-icon>
     </button>
     <button
       *ngIf="(showDisconnectDevice() | async)"
