--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/internal-error/internal-error.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/internal-error/internal-error.component.html
@@ -1,23 +1,22 @@
 <div style="margin-top: 20px;">
-    <b style="font-size: 16px; color: #444">Fallo comunicándose con el servidor
-      </b>
-  </div>
-  <div style="margin-top: 20px;" class="horizontal-container">
-    <svg-icon src="assets/civica-card-reload-pos/assets/check.svg" [svgStyle]="{'width':150, 'height': 150,'fill':'#F59100'}"></svg-icon>
-    <div style=" margin:auto; margin-left: 0px; color: #444;" class="vertical-container">
-      <mat-list>
-        <mat-list-item  *ngIf="errorType === 'INVALID_SESSION'">
-          <svg-icon src="assets/civica-card-reload-pos/assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
-          Sesión de usuario inválida, por favor comuniquese con soporte para
-        verificar y solucionar este error
+  <b style="font-size: 16px; color: #444">Fallo comunicándose con el servidor
+    </b>
+</div>
+<div style="margin-top: 20px;" class="horizontal-container">
+  <div style=" margin:auto; margin-left: 0px; color: #444;" class="vertical-container">
+    <mat-list>
+      <mat-list-item  *ngIf="errorType === 'INVALID_SESSION'">
+        <svg-icon src="assets/civica-card-reload-pos/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
+        Sesión de usuario inválida, por favor comuniquese con soporte para
+      verificar y solucionar este error
+      </mat-list-item>
+      <mat-list-item *ngIf="errorType === 'DEFAULT'">
+          <svg-icon src="assets/civica-card-reload-pos/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
+          No fue posible conectarse con el API
         </mat-list-item>
-        <mat-list-item *ngIf="errorType === 'DEFAULT'">
-            <svg-icon src="assets/civica-card-reload-pos/assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
-            No fue posible conectarse con el API
-          </mat-list-item>
-      </mat-list>
-    </div>
+    </mat-list>
   </div>
-  <div style="justify-content: flex-end" class="horizontal-container">
-      <button style="margin-right: 20px" mat-stroked-button color="primary" (click)="retry()">volver</button>
-  </div>
+</div>
+<div style="justify-content: flex-end; margin-top: 50px" class="horizontal-container">
+    <button style="margin-right: 20px" mat-stroked-button color="primary" (click)="retry()">volver</button>
+</div>
