--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/unknown-position/unknown-position.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/unknown-position/unknown-position.component.html
@@ -1,14 +1,14 @@
 <div style="margin-top: 20px; margin-bottom: 20px">
-    <b style="font-size: 16px; color: #444">Ubicación desconocida</b>
+  <b style="font-size: 16px; color: #444">Ubicación desconocida</b>
 </div>
 <div style="margin-top: 20px; justify-content: center;" class="horizontal-container">
-  <svg-icon src="assets/civica-card-reload-pos/assets/unknown_position.svg" [svgStyle]="{'width':150, 'height': 150,'fill':'#F63131'}"></svg-icon>
-  <div style="color: #444;" class="text-container">
-    <mat-list>
-      <mat-list-item>
-        <svg-icon src="assets/civica-card-reload-pos/assets/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
-        <p>Se debe permitir la optención de la ubicación en el navegador para un funcionamiento optimo de este componente</p>
-      </mat-list-item>
-    </mat-list>
-  </div>
+
+<div style="color: #444;" class="text-container">
+  <mat-list style="margin-top: 20px">
+    <mat-list-item>
+      <svg-icon src="./assets/civica-card-reload-pos/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
+      <p>Se debe permitir la optención de la ubicación en el navegador para un funcionamiento optimo de este componente</p>
+    </mat-list-item>
+  </mat-list>
+</div>
 </div>
