--- a/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/bluetooth-connection/bluetooth-connection.component.html
+++ b/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/bluetooth-connection/bluetooth-connection.component.html
@@ -2,9 +2,8 @@
     <b style="font-size: 16px; color: #444">Lectora desconectada, por favor establecer conexión con lectora Bluetooth</b>
 </div>
 <div style="margin-top: 20px; justify-content: center;" class="horizontal-container">
-  <svg-icon src="assets/civica-card-reload-pos/bluetooth_disabled.svg" [svgStyle]="{'width':150, 'height': 150,'fill':'#F63131'}"></svg-icon>
   <div style="color: #444;" class="text-container">
-    <mat-list>
+    <mat-list class="text-list">
       <mat-list-item>
         <svg-icon src="assets/civica-card-reload-pos/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
         Verifique la lectora este encendida
@@ -15,7 +14,7 @@
       </mat-list-item>
       <mat-list-item>
         <svg-icon src="assets/civica-card-reload-pos/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
-        <p>Explore y seleccione la lectora</p>
+        Explore y seleccione la lectora
       </mat-list-item>
       <mat-list-item>
           <button mat-stroked-button color="primary" *ngIf="(operabilityState$ | async).valueOf() === 'DISCONNECTED'" (click)="connect()" >Iniciar conexión</button>
