--- a/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/internal-error/internal-error.component.html
+++ b/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/internal-error/internal-error.component.html
@@ -3,7 +3,6 @@
       </b>
   </div>
   <div style="margin-top: 20px;" class="horizontal-container">
-    <svg-icon src="assets/civica-card-reload-pos/check.svg" [svgStyle]="{'width':150, 'height': 150,'fill':'#F59100'}"></svg-icon>
     <div style=" margin:auto; margin-left: 0px; color: #444;" class="vertical-container">
       <mat-list>
         <mat-list-item  *ngIf="errorType === 'INVALID_SESSION'">
@@ -18,6 +17,6 @@
       </mat-list>
     </div>
   </div>
-  <div style="justify-content: flex-end" class="horizontal-container">
+  <div style="justify-content: flex-end; margin-top: 50px" class="horizontal-container">
       <button style="margin-right: 20px" mat-stroked-button color="primary" (click)="retry()">volver</button>
   </div>
