Se agrega validación de Smart bluetooth

--- a/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/afcc-reloader.component.html
+++ b/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/afcc-reloader.component.html
@@ -74,6 +74,9 @@
               'REQUESTING_RELOAD_PERMISSION'
           "
         ></app-read-card>
+        <bluetooth-not-available
+          *ngIf="(operabilityState$ | async).valueOf() === 'BLUETOOTH_NOT_AVAILABLE'"
+        ></bluetooth-not-available>
         <app-internal-error
           *ngIf="(operabilityState$ | async).valueOf() === 'INTERNAL_ERROR'"
         ></app-internal-error>
