--- a/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/read-card/read-card.component.html
+++ b/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/read-card/read-card.component.html
@@ -4,29 +4,29 @@
 <div style="margin-top: 20px;" class="horizontal-container">
   <div style=" margin:auto; margin-left: 0px; color: #444;" class="vertical-container">
     <mat-form-field class="example-full-width">
-      <input matInput name="balance" [(ngModel)]="balance" currencyMask [options]="{ prefix: '$ ', thousands: '.', precision: '0' }" placeholder="Saldo" >
+      <input matInput name="balance" [(ngModel)]="balance" currencyMask [options]="{ prefix: '$ ', thousands: ',', precision: '0' }" placeholder="Saldo" >
     </mat-form-field>
     <mat-form-field *ngIf="false" class="example-full-width">
       <input matInput [(ngModel)]="state" placeholder="Estado">
     </mat-form-field>
     <mat-form-field *ngIf="operationState === 'CARD_READED'" class="example-full-width">
-      <input matInput placeholder="Valor recarga"  [(ngModel)]="value" currencyMask [options]="{ prefix: '$ ', thousands: '.', precision: '0' }">
+      <input matInput placeholder="Valor recarga"  [(ngModel)]="value" currencyMask [options]="{ prefix: '$ ', thousands: ',', precision: '0' }" (keyup)="onReloadValueChanged($event)" min="0">
     </mat-form-field>
     <div *ngIf="operationState === 'CARD_READED'" class="button-container">
-      <button style="margin-right: 10px" (click)="reloadCard()" mat-stroked-button color="primary">realizar recarga</button>
+      <button style="margin-right: 10px" (click)="reloadCard()" mat-stroked-button color="primary">Realizar Recarga</button>
       <button mat-stroked-button (click)="cancelReloadCard()" color="warn">Cancelar</button>
     </div>
   </div>
 </div>
 <div *ngIf="operationState === 'CARD_READED'" style="margin-top: 20px">
   <div class="sale-button-container">
-    <button class="pos-button" (click)="reloadCardShortCut(2000)" mat-raised-button color="primary">2.000$</button>
-    <button class="pos-button" (click)="reloadCardShortCut(5000)" mat-raised-button color="primary">5.000$</button>
-    <button class="pos-button" (click)="reloadCardShortCut(10000)" mat-raised-button color="primary">10.000$</button>
+    <button class="pos-button" (click)="reloadCardShortCut(2000)" mat-raised-button color="primary">$2,000</button>
+    <button class="pos-button" (click)="reloadCardShortCut(5000)" mat-raised-button color="primary">$5,000</button>
+    <button class="pos-button" (click)="reloadCardShortCut(10000)" mat-raised-button color="primary">$10,000</button>
   </div>
   <div class="sale-button-container">
-    <button class="pos-button" (click)="reloadCardShortCut(15000)" mat-raised-button color="primary">15.000$</button>
-    <button class="pos-button" (click)="reloadCardShortCut(20000)" mat-raised-button color="primary">20.000$</button>
-    <button class="pos-button" (click)="reloadCardShortCut(50000)" mat-raised-button color="primary">50.000$</button>
+    <button class="pos-button" (click)="reloadCardShortCut(15000)" mat-raised-button color="primary">$15,000</button>
+    <button class="pos-button" (click)="reloadCardShortCut(20000)" mat-raised-button color="primary">$20,000</button>
+    <button class="pos-button" (click)="reloadCardShortCut(50000)" mat-raised-button color="primary">$50,000</button>
   </div>
 </div>
