--- a/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/reload-card-successfully/reload-card-successfully.component.html
+++ b/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/reload-card-successfully/reload-card-successfully.component.html
@@ -22,3 +22,13 @@
       </div>
     </div>
   </div>
+  <div style="justify-content: flex-end; margin-top: 50px" class="horizontal-container">
+    <button
+      style="margin-right: 20px"
+      mat-stroked-button
+      color="primary"
+      (click)="retry()"
+    >
+      Volver
+    </button>
+  </div>
